--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         {{ content }}
       </div>
     </main>
-    <script type='text/javascript'src='/script/script.js'></script>
+    <script type='text/javascript'src='script/script.js'></script>
 
     {%- include footer.html -%}
 
