--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="{{ "style/style.css" | relative_url }}">
+	<link rel="stylesheet" href="style/style.css">
 	<script src='https://d3js.org/d3-zoom.v2.min.js'></script>
 	<script src='https://d3js.org/d3-selection.v2.min.js'></script>
 	<script src='https://d3js.org/d3-drag.v2.min.js'></script>
