added colours for clusters, implemented group legend (hidden) and improved the page structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+	{%- include head.html -%}
 
-  <body>
+	<body>
 
-    {%- include header.html -%}
+		{%- include header.html -%}
+		<nav><h1>Data Journalism networks on Twitter (2020)</h1></nav>
+		<main class="page-content" aria-label="Content">
+			<div class="wrapper">
+				{{ content }}
+			</div>
+		</main>
+		<script type='text/javascript'src='script/script.js'></script>
+		<script type='text/javascript'src='script/script_2.js'></script>
+		{%- include footer.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-    <script type='text/javascript'src='script/script.js'></script>
-
-    {%- include footer.html -%}
-
-  </body>
+	</body>
 
 </html>
