--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,1 @@
-<!-- <header class="site-header">
-	<div class="wrapper">
-		<h1>Dj network viewer</h1>
-	</div>
-</header>
- -->
+<header><h1>Data Journalism networks on Twitter (2020)</h1></header>
