added mentioning and mentioned barcharts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 		{%- include footer.html -%}
 		<script type='text/javascript'src='script/script.js'></script>
 		<script type='text/javascript'src='script/script_2.js'></script>
+		<script type='text/javascript'src='script/script_3.js'></script>
 	</body>
 
 </html>
