local vs global ranks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 		<script type='text/javascript'src='script/script_2.js'></script>
 		<script type='text/javascript'src='script/script_3.js'></script>
 		<script type='text/javascript'src='script/script_4.js'></script>
+		<script type='text/javascript'src='script/script_5.js'></script>
+		<script type='text/javascript'src='script/script_6.js'></script>
 	</body>
 
 </html>
