added focused svgs interactivities

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		<script type='text/javascript'src='script/script_4.js'></script>
 		<script type='text/javascript'src='script/script_5.js'></script>
 		<script type='text/javascript'src='script/script_6.js'></script>
+		<script type='text/javascript'src='script/script_nodes.js'></script>
 	</body>
 
 </html>
